5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4371/executions/1633_2946.log
== SUBMITION (2019-04-02 18:04:57) 
-- CODE:
float(input("digite a media dos laboratorios"))
float(input("digite a media dos trabalhos"))
float(input("media das provas"))

print(round)
-- EXECUTION TIME:
0.20183
-- TEST CASE 1:
---- input:
8.5
6.3
5.1
---- correct output:
6.31
---- user output:
<built-in function round>
-- TEST CASE 2:
---- input:
4.9
3.21
9.1
---- correct output:
6.28
---- user output:
<built-in function round>
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:05:00) 
-- CODE:
float(input("digite a media dos laboratorios"))
float(input("digite a media dos trabalhos"))
float(input("media das provas"))

print(round)
-- OUTPUT:
<built-in function round>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:06:40) 
-- CODE:
float(input("digite a media dos laboratorios" 25%))
float(input("digite a media dos trabalhos" 30%))
float(input("media das provas" 45%))

print(round)=total

-- ERROR:
File "XXXX", line 1
    float(input("digite a media dos laboratorios" 25%))
                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:06:57) 
-- CODE:
float(input("digite a media dos laboratorios" //25%))
float(input("digite a media dos trabalhos" //30%))
float(input("media das provas" //45%))

print(round)=total

-- ERROR:
File "XXXX", line 1
    float(input("digite a media dos laboratorios" //25%))
                                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:07:44) 
-- CODE:
float(input("digite a media dos laboratorios" //25%))
float(input("digite a media dos trabalhos" //30%))
float(input("media das provas" //45%))

print(float(round))=total

-- ERROR:
File "XXXX", line 1
    float(input("digite a media dos laboratorios" //25%))
                                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:08:25) 
-- CODE:
float(input("digite a media dos laboratorios" (round//25%))
float(input("digite a media dos trabalhos" (round//30%))
float(input("media das provas" (round//45%))

print(float(round))=total

-- ERROR:
File "XXXX", line 1
    float(input("digite a media dos laboratorios" (round//25%))
                                                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:16:50) 
-- CODE:
ML= 25% 
MT= 30%
MP= 45%


-- ERROR:
File "XXXX", line 1
    ML= 25% 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:18:18) 
-- CODE:
input(round("digite a media dos laboratorios"))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(round("digite a media dos laboratorios"))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:18:28) 
-- CODE:
input("digite a media dos laboratorios")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(round("digite a media dos laboratorios"))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:18:59) 
-- CODE:
input("digite a media dos laboratorios")
input ("digite a media dos trabalhos")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(round("digite a media dos laboratorios"))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:19:32) 
-- CODE:
input("digite a media dos laboratorios")
input ("digite a media dos trabalhos")
input("digite a media das provas")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(round("digite a media dos laboratorios"))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:20:19) 
-- CODE:
input("digite a media dos laboratorios")
input ("digite a media dos trabalhos")
input("digite a media das provas")

print ("digite a nota final")


-- OUTPUT:
digite a nota final
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:20:56) 
-- CODE:
input("digite a media dos laboratorios")
input ("digite a media dos trabalhos")
input("digite a media das provas")

print ("digite a nota final")


-- EXECUTION TIME:
0.174766
-- TEST CASE 1:
---- input:
8.5
6.3
5.1
---- correct output:
6.31
---- user output:
digite a nota final
-- TEST CASE 2:
---- input:
4.9
3.21
9.1
---- correct output:
6.28
---- user output:
digite a nota final
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:23:49) 
-- CODE:
input("digite media dos laboratorios")
input ("digite media dos trabalhos")
input("digite media das provas")

print (media_dos_laboratorios=(round(float 8.0))
print (media_dos_trabalhos=(round(float 8.2))
		 



-- ERROR:
File "XXXX", line 5
    print (media_dos_laboratorios=(round(float 8.0))
                                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:23:52) 
-- CODE:
input("digite media dos laboratorios")
input ("digite media dos trabalhos")
input("digite media das provas")

print (media_dos_laboratorios=(round(float 8.0))
print (media_dos_trabalhos=(round(float 8.2))
		 



-- ERROR:
File "XXXX", line 5
    print (media_dos_laboratorios=(round(float 8.0))
                                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:24:16) 
-- CODE:
input("digite media dos laboratorios")
input ("digite media dos trabalhos")
input("digite media das provas")

print (round(float 8.0))
print (round(float 8.2))
		 



-- ERROR:
File "XXXX", line 5
    print (round(float 8.0))
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:25:38) 
-- CODE:
input("laboratorios")
input ("trabalhos")
input("provas")

print("laboratorios,trabalhos,provas")
		 



-- OUTPUT:
laboratorios,trabalhos,provas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:26:00) 
-- CODE:
input("laboratorios")
input ("trabalhos")
input("provas")

print("laboratorios,trabalhos,provas")
		 



-- OUTPUT:
laboratorios,trabalhos,provas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:26:03) 
-- CODE:
input("laboratorios")
input ("trabalhos")
input("provas")

print("laboratorios,trabalhos,provas")
		 



-- EXECUTION TIME:
0.185626
-- TEST CASE 1:
---- input:
8.5
6.3
5.1
---- correct output:
6.31
---- user output:
laboratorios,trabalhos,provas
-- TEST CASE 2:
---- input:
4.9
3.21
9.1
---- correct output:
6.28
---- user output:
laboratorios,trabalhos,provas
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:26:23) 
-- CODE:
input("laboratorios")
input ("trabalhos")
input("provas")

print("laboratorios+trabalhos+provas")
		 



-- OUTPUT:
laboratorios+trabalhos+provas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:26:44) 
-- CODE:
input("laboratorios")
input ("trabalhos")
input("provas")

print("laboratorios+trabalhos+provas")
		 



-- OUTPUT:
laboratorios+trabalhos+provas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:27:32) 
-- CODE:
input("laboratorios")
input ("trabalhos")
input("provas")

print(8.0+8.0+8.0)
		 



-- OUTPUT:
24.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:27:46) 
-- CODE:
input("laboratorios")
input ("trabalhos")
input("provas")

print(8.0+8.0+8.0)
		 



-- EXECUTION TIME:
0.199695
-- TEST CASE 1:
---- input:
8.5
6.3
5.1
---- correct output:
6.31
---- user output:
24.0
-- TEST CASE 2:
---- input:
4.9
3.21
9.1
---- correct output:
6.28
---- user output:
24.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:28:08) 
-- CODE:
input("laboratorios")
input ("trabalhos")
input("provas")

print(round(8.1+8.0+8.0))
		 



-- OUTPUT:
24
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:28:19) 
-- CODE:
input("laboratorios")
input ("trabalhos")
input("provas")

print(round(8.1+8.0+8.0))
		 



-- OUTPUT:
24
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:28:28) 
-- CODE:
input("laboratorios")
input ("trabalhos")
input("provas")

print(round(8.1+8.0+8.0))
		 



-- OUTPUT:
24
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:28:48) 
-- CODE:
input("laboratorios")
input ("trabalhos")
input("provas")

print(round(8.1+8.0+8.0))
		 



-- EXECUTION TIME:
0.15012
-- TEST CASE 1:
---- input:
8.5
6.3
5.1
---- correct output:
6.31
---- user output:
24
-- TEST CASE 2:
---- input:
4.9
3.21
9.1
---- correct output:
6.28
---- user output:
24
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:30:04) 
-- CODE:
input("laboratorios")
input ("trabalhos")
input("provas")

print(round("laboratorios=8.1"+"trabalhos=8.0"+"provas=8.0"))
		 



-- EXECUTION TIME:
0.14212
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2946/main.py", line 5, in <module>
    print(round("laboratorios=8.1"+"trabalhos=8.0"+"provas=8.0"))
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:30:07) 
-- CODE:
input("laboratorios")
input ("trabalhos")
input("provas")

print(round("laboratorios=8.1"+"trabalhos=8.0"+"provas=8.0"))
		 



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round("laboratorios=8.1"+"trabalhos=8.0"+"provas=8.0"))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:31:00) 
-- CODE:
input("laboratorios")
input ("trabalhos")
input("provas")

(print)(round("laboratorios=8.1"+"trabalhos=8.0"+"provas=8.0"))
		 



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    (print)(round("laboratorios=8.1"+"trabalhos=8.0"+"provas=8.0"))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:31:44) 
-- CODE:
input("laboratorios")
input ("trabalhos")
input("provas")

(print(round("laboratorios=8.1"+"trabalhos=8.0"+"provas=8.0")))
		 



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    (print(round("laboratorios=8.1"+"trabalhos=8.0"+"provas=8.0")))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:32:58) 
-- CODE:
input(int("laboratorios"))
input(int("trabalhos"))
input(int("provas"))

(print(round("laboratorios=8.1"+"trabalhos=8.0"+"provas=8.0")))
		 



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(int("laboratorios"))
ValueError: invalid literal for int() with base 10: 'laboratorios'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:35:04) 
-- CODE:
ML= 8.0
MT= 8.1
MP=8.0

total=(round('ML+MT+MP'))
		 



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total=(round('ML+MT+MP'))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
